# AI-PR-Review-Bot

./: .ai-review.yml  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ai-pr-review.yml
docs/: architecture.md
src/ai_pr_review_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/pr_review_bot/: __main__.py  checkout.py  config.py  context.py  dashboard.py  diff_parser.py  domain.py  formatter.py  git_utils.py  github_api.py  github_app.py  llm_client.py  llm_schemas.py  prompts.py  redaction.py  repository_context.py  review_service.py  reviewer.py  risk.py  runtime.py  server.py  storage.py  utils.py  webhooks.py
tests/: test_checkout.py  test_config.py  test_dashboard.py  test_diff_parser.py  test_formatter.py  test_llm_client.py  test_redaction.py  test_reviewer.py  test_risk.py  test_runtime.py  test_storage.py  test_webhooks.py
